src/test/testData/AnnotatorTestData.java
public class Test {
  public static void main(String[] args) {
    System.out.println("biosyntax:website");
    System.out.println("biosyntax:key with spaces");
    System.out.println("biosyntax:<error descr="Unresolved property">websit</error>");
  }
}
